# cimsparql

./: pyproject.toml
cimsparql/: model.py  rdfgraph.py  url.py
